# basic-blockchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  address.c  base58check.c  ec-keypair.c  ec-priv.pem  ec-pub.pem  ecdsa-sign.c  ecdsa-verify.c  ex-message.txt  ex-signature.der  fixed-strings.c  hashes.c  integers.c  main.c  tx-build.c  tx-pack.c  tx-sign.c  vardata.c  varints.c  wif.c
